mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
# refering the secret.yaml file to get the pasword and username from the secret
---
# --- syntext meaning document seperation / meaning below are new decoument started 
# service and deployment can be under the same config file,
# make sure the lables are matched in the selector for bith service and deployment 
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # service port
      targetPort: 27017 #containerport
