ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.com # has to be a valid domain address
      http:
      # paths means the url path
        paths:
          - path: /
            backend:
            # name and port should coresponse to the service name of the internal service under metadata 
              serviceName: my-service
              servicePort: 8080
